fixed local env

--- a/year_project/notebooks/research.ipynb
+++ b/year_project/notebooks/research.ipynb
@@ -6,33 +6,24 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-06-02T21:03:06.906763Z",
-     "start_time": "2024-06-02T21:03:06.901991Z"
+     "end_time": "2024-06-15T09:59:57.986651Z",
+     "start_time": "2024-06-15T09:59:56.575013Z"
     }
    },
    "source": [
     "import torch\n",
-    "\n",
-    "y_pred=torch.tensor([[4,5,6],[1,3,6]])\n",
-    "y=torch.tensor([2,3])\n",
-    "top_pred = y_pred.argmax(1, keepdim=True)\n",
-    "print(top_pred,\"top_pred\")\n",
-    "\n",
-    "correct = top_pred.eq(y.view_as(top_pred)).sum()\n",
-    "print(correct)"
+    "print(torch.__version__)"
    ],
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[2],\n",
-      "        [2]]) top_pred\n",
-      "tensor(1)\n"
+      "2.3.1+cu121\n"
      ]
     }
    ],
-   "execution_count": 5
+   "execution_count": 1
   },
   {
    "metadata": {},
